--- a/local.yml
+++ b/local.yml
@@ -5,19 +5,19 @@ services:
         build:
             context: .
             dockerfile: ./docker/local/django/Dockerfile
-        command: /start
         volumes:
             - .:/app:z
             - static_volume:/app/staticfiles
             - media_volume:/app/mediafiles
-        expose:
-            - "8000"
+        ports:
+            - "8000:8000"
         env_file:
             - ./.envs/.local/.django
             - ./.envs/.local/.postgres
         depends_on:
             - postgres
             - mailhog
+        command: /start
         networks:
             - authors-api
 
